Update styles and fonts across entire site

--- a/src/assets/scss/_homepage.scss
+++ b/src/assets/scss/_homepage.scss
@@ -99,9 +99,10 @@
 }
 
 .hero-intro-text {
-  font-family: 'AYearWithoutRain';
-  font-size: 1.55rem;
-  max-width: 35rem;
+  font-family: 'ChelseaMarket';
+  font-size: 1.2rem;
+  line-height: 1.7;
+  max-width: 36rem;
   margin-top: 2.5rem;
 }
 
@@ -112,7 +113,7 @@
 
 .btn-hero {
   display: block;
-  font-family: 'AYearWithoutRain';
+  font-family: 'ChelseaMarket';
   font-size: 1.75rem;
   font-weight: 500;
   width: 23rem;
