--- a/src/assets/scss/_listings.scss
+++ b/src/assets/scss/_listings.scss
@@ -1,26 +1,23 @@
 .search-results-container {
   position: relative;
-  background-color: rgb(250, 245, 225);
-  max-width: 90rem;
-  border-radius: 0.6rem;
+  background-color: rgb(248, 250, 225);
+  max-width: 120rem;
   padding: 1.5rem;
   margin: 0 1.5rem 8rem 1.5rem;
-  box-shadow: 0 0.25rem 1.2rem 0.15rem #8787874d;
-  margin: 1.5rem auto 0 auto;
   margin: 0 auto;
+  padding: 2rem;
+  background: url("../../../public/small-hexagons.jpg");
+  background-size: cover;
 
-  // &::before {
-  //   content: "";
-  //   position: absolute;
-  //   width: 100%;
-  //   height: 100%;
-  //   background: url("../../../public/leaves-gdc711b7fd_1280.jpg");
-  //   // background: url("../../../public/leaves-6383340_1280.webp");
-  //   background-size: contain;
-  //   opacity: 0.075;
-  //   left: 0;
-  //   top: 0;
-  // }
+  &::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 249, 221, 0.82);
+    top: 0;
+    left: 0;
+  }
 }
 
 .listings-title-container {
@@ -32,7 +29,8 @@
 }
 
 .listings-title {
-  font-size: 1rem;
+  font-family: 'ChelseaMarket';
+  font-size: 0.9rem;
   white-space: pre-wrap;
 }
 
@@ -52,7 +50,7 @@
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
-  min-height: 30rem;
+  min-height: calc(100vh - 4rem);
   padding: 2.5rem;
 }
 
@@ -88,24 +86,59 @@
   display: flex;
   flex-direction: column;
   width: 25rem;
-  height: 29rem;
+  height: 27rem;
   color: #222427;
   background-color: rgb(253, 253, 252);
-  border: 2px solid $color-highlight;
-  border-radius: 0.6rem;
-  box-shadow: 0 0.25rem 1rem #a4a4a44d;
+  background: url("../../../public/watercolorbg.jpg");
+  background-size: cover;
+  background-position: center 50%;
+  border: 2px solid rgb(202, 180, 246);
+  border-radius: 0.5rem;
+  box-shadow:
+    rgba(112, 65, 207, 0.27) 1px 1px,
+    rgba(112, 65, 207, 0.23) 4px 4px,
+    rgba(112, 65, 207, 0.18) 8px 8px,
+    rgba(112, 65, 207, 0.13) 12px 12px;
+  transition: 300ms ease all;
   overflow: hidden;
+  cursor: pointer;
   z-index: 2;
 
-  // &::after {
-  //   content: "";
-  //   position: absolute;
-  //   width: 100%;
-  //   height: 100%;
-  //   background-color: $color-primary;
-  //   opacity: 0.5;
-  //   z-index: -1;
-  // }
+  &:hover {
+    border: 2px solid rgba(247, 221, 22, 0.8);
+    box-shadow:
+    rgba(247, 221, 22, 0.27) 0 0 1px 1px,
+    rgba(247, 221, 22, 0.23) 0 0 4px 4px,
+    rgba(247, 221, 22, 0.18) 0 0 8px 8px;
+    transition: 300ms ease all;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.81);
+    z-index: -1;
+  }
+
+  // the 2nd of each 3 listings
+  &:nth-child(3n+2) {
+    background-position: center 10%;
+
+    &::after {
+      background-color: rgba(254, 255, 219, 0.84);
+    }
+  }
+
+  // the third of each 3 listings
+  &:nth-child(3n+3) {
+    background-position: center 100%;
+    
+    &::after {
+      background-color: rgba(250, 239, 254, 0.86);
+    }
+  }
 }
 
 .listing-save-container {
@@ -119,8 +152,9 @@
   border-radius: 50%;
   box-shadow: 0 0 2px 1px #3c3c3c;
   z-index: 10;
-  right: 1rem;
   top: 1rem;
+  right: 1rem;
+
   cursor: pointer;
   transition: all ease 200ms;
   -webkit-transition: all ease 200ms;
@@ -185,20 +219,21 @@
   text-align: center;
   flex: 1;
   width: 100%;
-  min-height: 17rem;
+  min-height: 14rem;
   overflow: hidden;
-  margin-bottom: 0.5rem;
+  padding: 0.75rem;
 }
 
 .listing-image {
   width: 100%;
   height: calc(100% - 2rem);
-
   min-height: 10rem;
-
   object-fit: cover;
   margin: 0 auto;
   background-color: white;
+  // border: 2px solid #ffffff;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
 }
 
 .img-arrow {
@@ -207,7 +242,7 @@
   justify-content: center;
   position: absolute;
   font-size: 1.4rem;
-  color: $color-primary;
+  color: #7041cf;
   height: 100%;
   width: 1.5rem;
   top: 0;
@@ -219,7 +254,7 @@
   overflow: hidden;
   
   &:hover {
-    color: #0a1064;
+    color: $color-primary;
     transition: all 200ms;
     -webkit-transition: all 200ms;
   }
@@ -245,24 +280,24 @@
   gap: 0.25rem 0.45rem;
   width: 100%;
   height: 2rem;
-  background-color: eee;
+  margin-top: 0.2rem;
 }
 
 .listing-image-circle {
-  color: #0a1064;
+  color: #7041cf;
   background-color: $color-primary;
   width: 0.7rem;
   height: 0.7rem;
   transition: 200ms ease all;
   -webkit-transition: 200ms ease all;
-  border: 2px solid #0a1064;
+  border: 2px solid #7041cf;
   border-radius: 50%;
   cursor: pointer;
   user-select: none;
   -webkit-user-select: none;
 
   &:hover {
-    background-color: #0a1064;
+    background-color: #7041cf;
     transition: 200ms ease all;
     -webkit-transition: 200ms ease all;
   }
@@ -282,6 +317,7 @@
 }
 
 .listing-row {
+  font-family: "ChelseaMarket";
   display: flex;
   align-items: center;
   flex-wrap: wrap;
@@ -302,8 +338,9 @@
 
 .listing-type {
   font-weight: 500;
-  font-size: 1.05rem;
+  font-size: 1rem;
   margin: 0;
+  padding: 0.1rem;
 }
 
 .listing-price {
@@ -339,6 +376,7 @@
 }
 
 .listing-link-container {
+  font-family: "ChelseaMarket";
   position: relative;
   display: inline-block;
   font-weight: 600;
@@ -355,11 +393,11 @@
 .listing-link {
   position: absolute;
   display: inline-block;
-  color: #9590d1;
+  color: #7041cf;
   width: 0;
   white-space: pre;
   overflow: hidden;
-  transition: width 500ms;
+  transition: width 400ms;
   text-decoration: underline;
 }
 
@@ -375,12 +413,12 @@
 }
 
 .listing-link-hover {
-  color: #6f6ca8;
+  color: #7041cf;
   text-decoration: none;
   padding: 0.5rem 0;
 
   &:hover {
-    color: #6f6ca8;
+    color: #7041cf;
     text-decoration: none;
   }
 }
@@ -422,4 +460,32 @@
     border-color: transparent;
     background-color: rgb(229, 227, 246);
   }
+}
+
+.saved-listings-page-container {
+  background-color: $color-secondary;
+}
+
+
+// individual listing page
+.listing-detail-page-container {
+  width: 100%;
+  height: 100%;
+  // background: url("../../../public/watercolorbg.jpg");
+}
+
+.listing-detail-img-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 100%;
+  height: 100%;
+  max-height: calc(100vh - 4rem);
+  background-color: rgb(65, 63, 63);
+  padding: 2rem;
+}
+
+.listing-detail-page-img {
+  max-width: 100%;
+  max-height: calc(100vh - 6rem);
 }
