--- a/src/assets/scss/_loading.scss
+++ b/src/assets/scss/_loading.scss
@@ -4,13 +4,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #433d3dc9;
+  background-color: rgba(67, 61, 61, 0.85);
   min-width: 100%;
   height: 100%;
   top: 0;
   left: 0;
   z-index: 60;
-  animation: disappear 0.6s linear forwards 3.3s;
+  animation: disappear 0.65s linear forwards 3.38s;
 }
 
 .loading-circle-container {
@@ -25,8 +25,9 @@
 }
 
 .loading-text {
+  font-family: "ChelseaMarket";
   position: relative;
-  color: rgb(210, 210, 210);
+  color: rgb(219, 219, 219);
   font-size: 2.1rem;
   font-weight: bold;
   text-align: center;
