--- a/src/assets/scss/_media.scss
+++ b/src/assets/scss/_media.scss
@@ -13,10 +13,6 @@
   .search-dropdown-input {
     width: 11rem;
   }
-
-  .checkbox-container {
-    max-width: 38rem;
-  }
   
   .rw-multiselect {
     min-width: unset;
@@ -50,6 +46,7 @@
   }
 
   .unknown-listings-title {
+    font-size: 1rem;
     white-space: unset;
   }
 }
@@ -106,14 +103,10 @@
 }
 
 @media screen and (max-width: 853px) {
-  .hero-section-search-title {
-    font-size: 2.75rem;
-  }
-
   .hero-intro-text {
     max-width: 100%;
     text-align: center;
-    padding: 0 1rem;
+    padding: 0 2rem;
   }
   
   .btn-hero {
@@ -123,9 +116,9 @@
   
   .search-form-container {
     flex-direction: row;
-    gap: 0.5rem;
+    gap: 1rem;
     width: 80%;
-    padding: 2.5rem 5rem;
+    padding: 2rem 4rem;
   }
 
   .search-label {
@@ -134,6 +127,7 @@
     justify-content: space-between;
     gap: 0.5rem;
     min-width: 28rem;
+    margin: 0;
   }
 
   .search-input-container {
@@ -194,27 +188,11 @@
     max-width: 100%;
   }
 
-  // re-order the fields so the dropdowns don't overhang the container too much
-  .advanced-search-container {
-    margin: 1rem 0 1.5rem 0;
-  }
-
-  .checkbox-container {
-    max-width: unset;
-  }
-
   .listing-container {
     width: 25rem;
     height: fit-content;
   }
 }
-
-@media screen and (max-width: 750px) {
-  .hero-intro-text {
-    font-size: 1.45rem;
-  }
-}
-
 
 @media screen and (max-width: 700px) {
   .hero-text-container {
@@ -227,6 +205,10 @@
 
   .hero-subtitle {
     padding-right: 2.6rem;
+  }
+
+  .hero-intro-text {
+    padding: 0 2.5rem;
   }
 
   .search-form-container {
@@ -275,19 +257,13 @@
   }
 
   .hero-section-search-title {
-    font-size: 3rem;
-    max-width: 22rem;
-    margin: 5rem auto 0.5rem auto;
-  }
-
-  .hero-intro-text {
-    font-size: 1.4rem;
-    margin: 1.5rem 0 0 0;
-    padding: 0 1rem;
+    font-size: 2rem;
+    margin: 3rem auto 0.5rem auto;
   }
 }
 
 @media screen and (max-width: 630px) {
+  // homepage
   .hero-title {
     width: 100%;
     font-size: 3.4rem;
@@ -302,12 +278,18 @@
     width: 17rem; 
   }
 
+  // search form
   .search-form-container {
     padding: 2.5rem 3rem 5rem 3rem;
   }
+
+  .advanced-search-container {
+    margin: 0 0 1rem 0;
+  }
   
   .btn-advanced-search {
-    bottom: 2rem;
+    font-size: 1.2rem;
+    bottom: 2.25rem;
     left: 50%;
     transform: translateX(-50%);
   }
@@ -355,8 +337,8 @@
   }
 
   .hero-intro-text {
-    font-size: 1.3rem;
-    padding: 0 2.5rem;
+    font-size: 1.1rem;
+    margin: 2rem 0 0 0;
   }
 
   .btn-hero {
@@ -405,12 +387,16 @@
   }
   
   .hero-intro-text {
-    padding: 0 1.5rem;
+    line-height: 1.6;
+    padding: 0 2rem;
   }
 
   .btn-hero {
-    width: 14rem;
-    margin: 1.5rem auto 0 auto;
+    margin: 2rem auto 0 auto;
+  }
+
+  .hero-section-search-title {
+    max-width: 17rem;
   }
 
   .loading-screen-container {
@@ -484,12 +470,20 @@
 
   .hero-subtitle {
     font-size: 1.8rem;
-    padding: 0.5rem 1.3rem 0 1.3rem;
+    padding: 0.5rem 1.4rem 0 1.4rem;
   }
 
   .hero-intro-text {
-    font-size: 1.15rem;
+    font-size: 1rem;
+    line-height: 1.4;
     padding: 0 1.5rem;
+    margin: 1rem 0 0 0;
+  }
+
+  .btn-hero {
+    width: 13rem;
+    margin: 1.5rem auto 0 auto;
+    font-size: 1.4rem;
   }
   
   .loading-screen-container {
@@ -520,10 +514,6 @@
 
 @media screen and (max-width: 340px) {
   .hero-subtitle {
-    padding: 1rem 0.5rem 0 0.5rem;
-  }
-
-  .hero-intro-text {
-    margin: 0.5rem 0 0 0;
+    padding: 0.5rem 0.5rem 0 0.5rem;
   }
 }
