--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -2,7 +2,8 @@
 $color-primary: rgb(247, 221, 22);
 $color-highlight: rgb(254, 254, 176);
 $color-secondary: rgb(200, 239, 255);
-$color-text: rgb(62, 62, 62);
+$color-tertiary: rgb(112, 65, 207);
+$color-text: rgb(52, 49, 49);
 
 // box-shadow
 $focus-shadow: 0 0 3px 1px #8baeb3;
