--- a/src/assets/scss/_navbar.scss
+++ b/src/assets/scss/_navbar.scss
@@ -44,7 +44,7 @@
 
 .navbar-logo-text {
   position: relative;
-  font-family: 'ChelseaMarket';
+  font-family: "ChelseaMarket", "Raleway", sans-serif;
   font-size: 1.4rem;
   top: 0.15rem;
   left: 2.55rem;
@@ -52,7 +52,7 @@
 
 .navbar-link {
   position: relative;
-  font-family: 'ChelseaMarket';
+  font-family: "ChelseaMarket", "Raleway", sans-serif;
   display: flex;
   align-items: center;
   gap: 0.35rem;
