--- a/src/assets/scss/_sorting-dropdown.scss
+++ b/src/assets/scss/_sorting-dropdown.scss
@@ -1,5 +1,5 @@
 .sorting-dropdown-container {
-  font-family: "ChelseaMarket";
+  font-family: "ChelseaMarket", "Raleway", sans-serif;
   position: relative;
   display: flex;
   align-items: center;
