--- a/src/assets/scss/_error.scss
+++ b/src/assets/scss/_error.scss
@@ -8,14 +8,14 @@
 }
 
 .error-page-title {
-  font-family: 'ChelseaMarket';
+  font-family: "ChelseaMarket", "Raleway", sans-serif;
   font-size: 2.5rem;
   width: 100%;
   text-align: center;
 }
 
 .error-page-subtitle {
-  font-family: 'ChelseaMarket';
+  font-family: "ChelseaMarket", "Raleway", sans-serif;
   font-size: 2rem;
   width: 100%;
   text-align: center;
