--- a/src/assets/scss/_homepage.scss
+++ b/src/assets/scss/_homepage.scss
@@ -99,7 +99,7 @@
 }
 
 .hero-intro-text {
-  font-family: 'ChelseaMarket';
+  font-family: "ChelseaMarket", "Raleway", sans-serif;
   font-size: 1.2rem;
   line-height: 1.7;
   max-width: 36rem;
@@ -113,7 +113,7 @@
 
 .btn-hero {
   display: block;
-  font-family: 'ChelseaMarket';
+  font-family: "ChelseaMarket", "Raleway", sans-serif;
   font-size: 1.75rem;
   font-weight: 500;
   width: 23rem;
