--- a/src/assets/scss/_loading.scss
+++ b/src/assets/scss/_loading.scss
@@ -10,7 +10,7 @@
   top: 0;
   left: 0;
   z-index: 60;
-  animation: disappear 0.6s linear forwards 3.5s;
+  animation: disappear 0.2s linear forwards 3.4s;
 }
 
 .loading-circle-container {
@@ -25,7 +25,7 @@
 }
 
 .loading-text {
-  font-family: "ChelseaMarket";
+  font-family: "ChelseaMarket", "Raleway", sans-serif;
   position: relative;
   color: rgb(219, 219, 219);
   font-size: 2.1rem;
