--- a/src/assets/scss/_search-form.scss
+++ b/src/assets/scss/_search-form.scss
@@ -25,7 +25,7 @@
 
 .hero-section-search-title {
   position: relative;
-  font-family: 'ChelseaMarket';
+  font-family: "ChelseaMarket", "Raleway", sans-serif;
   font-size: 2.5rem;
   color: $color-highlight;
   font-weight: bold;
@@ -83,7 +83,7 @@
 }
 
 .search-label {
-  font-family: 'ChelseaMarket';
+  font-family: "ChelseaMarket", "Raleway", sans-serif;
   font-size: 1.2rem;
   font-weight: 500;
   height: max-content;
@@ -133,7 +133,7 @@
 }
 
 .search-dropdown-container {
-  font-family: 'ChelseaMarket';
+  font-family: "ChelseaMarket", "Raleway", sans-serif;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -253,7 +253,7 @@
 }
 
 .btn-advanced-search {
-  font-family: 'ChelseaMarket';
+  font-family: "ChelseaMarket", "Raleway", sans-serif;
   display: flex;
   align-items: center;
   gap: 0 0.25rem;
@@ -283,7 +283,7 @@
 }
 
 .btn-search {
-  font-family: 'ChelseaMarket';
+  font-family: "ChelseaMarket", "Raleway", sans-serif;
   position: absolute;
   font-size: 1.75rem;
   font-weight: 500;
@@ -452,14 +452,14 @@
 }
 
 .unknown-listings-title {
-  font-family: 'ChelseaMarket';
+  font-family: "ChelseaMarket", "Raleway", sans-serif;
   font-size: 1.1rem;
   text-align: center;
   white-space: pre-wrap;
 }
 
 .unknown-listings-subtitle {
-  font-family: 'ChelseaMarket';
+  font-family: "ChelseaMarket", "Raleway", sans-serif;
   font-size: 1.25rem;
   text-align: center;
   margin-top: 1.25rem;
@@ -474,7 +474,7 @@
 }
 
 .checkbox-label {
-  font-family: 'ChelseaMarket';
+  font-family: "ChelseaMarket", "Raleway", sans-serif;
   font-size: 1rem;
   display: flex;
   cursor: pointer;
