--- a/src/assets/scss/_search-form.scss
+++ b/src/assets/scss/_search-form.scss
@@ -100,7 +100,8 @@
 
 .search-input {
   font-size: 1.25rem;
-  width: 6.25rem;
+  width: 6.5rem;
+  min-width: 6.5rem;
   height: 2.5rem;
   line-height: 2.5rem;
   outline: none;
