--- a/src/assets/scss/_listings.scss
+++ b/src/assets/scss/_listings.scss
@@ -304,7 +304,7 @@
 }
 
 .img-arrow-left {
-  left: 0.5rem;
+  left: 0;
 
   span {
     transform: rotate(180deg);
@@ -312,18 +312,27 @@
 }
 
 .img-arrow-right {
-  right: 0.5rem;
+  right: 0;
 }
 
 .listing-image-control-bar {
   position: relative;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  gap: 0.25rem 0.45rem;
   width: 100%;
-  height: 2rem;
+  height: fit-content;
   margin-top: 0.2rem;
+  padding: 0.5rem 1.6rem;
+}
+
+.listing-image-cirlce-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 1.2rem;
+  height: 1.25rem;
 }
 
 .listing-image-circle {
@@ -338,6 +347,7 @@
   cursor: pointer;
   user-select: none;
   -webkit-user-select: none;
+  padding: 0 0.1rem;
 
   &:hover {
     background-color: $color-tertiary;
@@ -347,8 +357,8 @@
 }
 
 .listing-image-current {
-  width: 1.25rem;
-  height: 1.25rem;
+  width: 1.2rem;
+  height: 1.2rem;
 }
 
 .listing-details-container {
@@ -498,8 +508,11 @@
 .listing-detail-page-img {
   position: relative;
   max-width: 100%;
-  height: 100%;
+  width: 100%;
   min-height: 0;
+  max-height: 100%;
+  object-fit: contain;
+  border-radius: 0.15rem;
 }
 
 .listing-detail-info-container {
