--- a/src/assets/scss/_listings.scss
+++ b/src/assets/scss/_listings.scss
@@ -541,7 +541,7 @@
     width: 100%;
     height: 100%;
     background-color: $color-highlight;
-    opacity: 0.87;
+    opacity: 0.85;
     top: 0;
     left: 0;
     z-index: 1;
@@ -564,6 +564,7 @@
 
 .listing-detail-agent {
   text-align: center;
+  margin: 0;
 }
 
 .listing-link-container {
@@ -574,7 +575,7 @@
   text-align: center;
   text-transform: none;
   padding-top: 0.25rem;
-  margin: auto auto 0 auto;
+  margin: -0.5rem auto 0 auto;
 
   &:hover .listing-link {
     width: 100%;
