--- a/src/assets/scss/_search-form.scss
+++ b/src/assets/scss/_search-form.scss
@@ -267,7 +267,7 @@
   outline: none;
   margin: auto 0 0 auto;
   padding-bottom: 1.15rem;
-  z-index: 50;
+  // z-index: 50;
 
   &:hover {
     color: black;
