--- a/src/assets/scss/_listings.scss
+++ b/src/assets/scss/_listings.scss
@@ -540,7 +540,7 @@
   flex-direction: column;
   gap: 1rem;
   background: url("../../../public/1.jpg");
-  background-size: contain;
+  background-size: cover;
   border-radius: 1rem;
   border: 5px solid $color-primary;
   margin: 1.5rem;
@@ -557,8 +557,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: $color-highlight;
-    opacity: 0.85;
+    background-color: rgba(254, 254, 200, 0.92);
     top: 0;
     left: 0;
     z-index: 1;
