Add basic footer to all pages except homepage

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -41,6 +41,7 @@
 @import "react-widgets-dropdown.scss";
 
 @import "animations";
+@import "footer";
 @import "loading";
 @import "navbar";
 @import "sorting-dropdown";
