--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,8 +1,12 @@
 // colors
 $color-primary: rgb(247, 221, 22);
-$color-highlight: rgb(254, 254, 176);
+$color-primary-highlight: rgb(254, 254, 176);
+
 $color-secondary: rgb(200, 239, 255);
+$color-secondary-highlight: rgb(167, 203, 215);
+
 $color-tertiary: rgb(112, 65, 207);
+
 $color-text: rgb(52, 49, 49);
 
 // box-shadow
