--- a/src/assets/scss/_media.scss
+++ b/src/assets/scss/_media.scss
@@ -76,6 +76,11 @@
     // z-index: 100;
     margin: 0;
   }
+
+  // contact
+  .contact-page-container {
+    padding: 0 3rem;
+  }
 }
 
 @media screen and (max-width: 865px) {
@@ -128,7 +133,7 @@
   
   .btn-hero {
     width: 18rem;
-    margin: 1.5rem auto 0 auto;
+    margin: 1rem auto 0 auto;
   }
   
   .search-form-container {
@@ -337,7 +342,7 @@
   }
 
   .btn-hero {
-    width: 17rem; 
+    width: 17rem;
   }
 
   // search form
@@ -371,6 +376,11 @@
     .rw-multiselect {
       min-width: 10rem;
     }
+  }
+
+  // contact
+  .btn-contact-submit {
+    width: 100%;
   }
 }
 
@@ -437,6 +447,15 @@
   .listing-link-default {
     font-size: 1.1rem;
   }
+
+  // contact
+  .contact-page-container {
+    padding: 0 1.25rem;
+  }
+
+  .contact-title {
+    font-size: 1.6rem;
+  }
 }
 
 @media screen and (max-width: 500px) {
@@ -495,6 +514,13 @@
 
   .search-radius-slider {
     width: 20rem;
+  }
+
+  // contact page
+  .result-message {
+    width: 12.5rem;
+    margin: 0 auto;
+    white-space: normal;
   }
 }
 
@@ -566,7 +592,7 @@
 
   .btn-hero {
     width: 13rem;
-    margin: 1.5rem auto 0 auto;
+    margin: 1.25rem auto 0 auto;
     font-size: 1.4rem;
   }
   
