Add renamed variable copy until other files match new name

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,5 +1,6 @@
 // colors
 $color-primary: rgb(247, 221, 22);
+$color-highlight: rgb(254, 254, 176);
 $color-primary-highlight: rgb(254, 254, 176);
 
 $color-secondary: rgb(200, 239, 255);
