--- a/src/assets/scss/_contact.scss
+++ b/src/assets/scss/_contact.scss
@@ -21,7 +21,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgba(211, 241, 253, 0.85);
+    background-color: rgba(244, 248, 255, 0.86);
     top: 0;
     left: 0;
     z-index: 1;
@@ -211,4 +211,39 @@
   white-space: pre-wrap;
   transition: all 0.3s 1.75s;
   -webkit-transition: all 0.3s 1.75s;
+}
+
+.sent {
+  .letter {
+    position: relative;
+    animation: change-letter-size 1.1s forwards ease-in 0.2s;
+    -webkit-animation: change-letter-size 1.1s forwards ease-in;
+  }
+
+  .side:nth-of-type(1) {
+    transform-origin: 0 100%;
+    animation: fold-letter 0.5s forwards ease-in;
+    -webkit-animation: fold-letter 0.5s forwards ease-in;
+  }
+
+  .contact-title, 
+  .contact-textarea,
+  .contact-input {
+    animation: fade-out-letter-contents 0.6s forwards linear;
+    -webkit-animation: fade-out-letter-contents 0.6s forwards linear;
+  }
+
+  .btn-contact-submit {
+    display: none;
+  }
+
+  .envelope {
+    animation: fade-in-envelope 0.5s 1.15s forwards ease-out;
+    -webkit-animation: fade-in-envelope 0.5s 1.15s forwards ease-out;
+  }
+
+  .result-message {
+    opacity: 1;
+    transform: translateY(-10rem);
+  }
 }
