--- a/src/assets/scss/_media.scss
+++ b/src/assets/scss/_media.scss
@@ -366,6 +366,7 @@
     align-items: center;
     justify-content: center;
     gap: 1rem;
+    text-align: center;
   }
 
   .sorting-dropdown-container {
@@ -465,7 +466,7 @@
 
   .search-results-container {
     border-radius: 0;
-    padding: 2rem 0.5rem;
+    padding: 2rem 1.5rem;
   }
 }
 
