--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -9,7 +9,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   overflow: hidden;
-  box-shadow: rgb(120, 117, 54) 0px 4px 4px inset;
+  box-shadow: rgb(120, 117, 54) 0px 4px 4px inset, rgb(120, 117, 54) 0px 4px 4px;
   // Allow overlay to show through whilst keeping all text on top
   isolation: isolate;
   padding: 0.5rem 1.5rem;
@@ -19,7 +19,7 @@
     position: absolute;
     width: 100%;
     min-height: 100%;
-    background: linear-gradient(90deg, rgba(201, 174, 255, 0.85) 5%, rgba(200, 239, 255, 0.87) 30%, rgba(200, 239, 255, 0.92));
+    background: linear-gradient(90deg, rgba(201, 174, 255, 0.85) 5%, rgba(180, 232, 252, 0.87) 30%, rgba(184, 235, 255, 0.92));
     left: 0;
     top: 0;
     z-index: -1;
