--- a/src/assets/scss/_navbar.scss
+++ b/src/assets/scss/_navbar.scss
@@ -141,7 +141,7 @@
 
 .hamburger-menu {
   position: absolute;
-  background-color: $color-highlight;
+  background-color: $color-primary-highlight;
   width: 100%;
   border: 3px solid $color-primary;
   border-radius: 0.5rem;
