--- a/src/assets/scss/_sorting-dropdown.scss
+++ b/src/assets/scss/_sorting-dropdown.scss
@@ -19,7 +19,7 @@
 
 .sorting-dropdown {
   position: absolute;
-  background-color: $color-highlight;
+  background-color: $color-primary-highlight;
   width: 100%;
   border: 3px solid $color-primary;
   border-radius: 0.5rem;
