--- a/src/assets/scss/_loading.scss
+++ b/src/assets/scss/_loading.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: rgba(67, 61, 61, 0.85);
+  background: linear-gradient(180deg, rgba(50, 45, 45, 0.9), rgba(57, 50, 50, 0.95));
   min-width: 100%;
   height: 100%;
   top: 0;
