--- a/src/assets/scss/_error.scss
+++ b/src/assets/scss/_error.scss
@@ -1,6 +1,6 @@
 .error-page-container {
   width: 100%;
-  height: calc(100vh - 4rem);
+  height: calc(100vh - 4rem - 3rem);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,63 +9,19 @@
 }
 
 .error-bee-route-container {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   width: 24rem;
   height: 24rem;
-  border-radius: 50%;
+  margin: 0;
 }
 
 .error-bee-border {
-  position: absolute;
   width: 24rem;
   height: 24rem;
-  overflow: hidden;
-  mask: conic-gradient(from 90deg,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0) 30%,
-    rgba(0, 0, 0, 0.05) 60%,
-    rgba(0, 0, 0, 0.1) 70%,
-    rgba(0, 0, 0, 0.2) 80%,
-    rgba(0, 0, 0, 0.25) 85%,
-    rgba(0, 0, 0, 0.4) 90%,
-    rgba(0, 0, 0, 0.75) 95%,
-    rgb(0, 0, 0) 100%
-  );
   animation: 9s linear infinite bee-trail;
   -webkit-animation: 9s linear infinite bee-trail;
-
-  &::before {
-    content: "";
-    position: absolute;
-    border: 2px dashed $color-tertiary;
-    border-radius: 50%;
-    transform: rotate(30deg);
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-  }
-
-  &::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: rotate(60deg);
-  }
 }
 
 .error-bee {
-  position: absolute;
-  width: 2.5rem;
-  height: 2.5rem;
-  background: url("../../../public/bee-1.png");
-  background-size: cover;
-  border-radius: 50%;
   animation: rotate-bee 9s linear infinite;
   -webkit-animation: rotate-bee 9s linear infinite;
 }
