--- a/src/assets/scss/_loading.scss
+++ b/src/assets/scss/_loading.scss
@@ -529,3 +529,83 @@
     left: -0.3rem;
   }
 }
+
+
+// Loading search form screen
+.loading-bee-container {
+  .hero-section-search {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+.loading-bee-route-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 12rem;
+  height: 12rem;
+  border-radius: 50%;
+  z-index: 250;
+  margin-top: 10rem;
+}
+
+.loading-bee-border {
+  position: absolute;
+  width: 12rem;
+  height: 12rem;
+  overflow: hidden;
+  mask: conic-gradient(from 90deg,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0) 30%,
+    rgba(0, 0, 0, 0.05) 60%,
+    rgba(0, 0, 0, 0.1) 70%,
+    rgba(0, 0, 0, 0.2) 80%,
+    rgba(0, 0, 0, 0.25) 85%,
+    rgba(0, 0, 0, 0.4) 90%,
+    rgba(0, 0, 0, 0.75) 95%,
+    rgb(0, 0, 0) 100%
+  );
+  animation: 4s linear infinite bee-trail;
+  -webkit-animation: 4s linear infinite bee-trail;
+
+  &::before {
+    content: "";
+    position: absolute;
+    border: 2px dashed $color-tertiary;
+    border-radius: 50%;
+    transform: rotate(30deg);
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: rotate(60deg);
+  }
+}
+
+.loading-bee {
+  position: absolute;
+  width: 2.5rem;
+  height: 2.5rem;
+  background: url("../../../public/bee-1.png");
+  background-size: cover;
+  border-radius: 50%;
+  animation: rotate-bee-small 4s linear infinite;
+  -webkit-animation: rotate-bee-small 4s linear infinite;
+}
+
+.loading-bee-title {
+  font-family: "ChelseaMarket", "Raleway", sans-serif;
+  font-size: 1.75rem;
+  width: 100%;
+  text-align: center;
+}
