--- a/src/assets/scss/_search-form.scss
+++ b/src/assets/scss/_search-form.scss
@@ -2,7 +2,8 @@
   position: relative;
   background-color: $color-secondary;
   width: 100%;
-  min-height: 100vh;
+  // must always keep scrollbar in view
+  min-height: calc(100vh - 3rem);
   box-shadow: rgba(120, 117, 54, 0.4) 0px 1px 7px inset;
   overflow: hidden;
   z-index: 49;
@@ -10,7 +11,7 @@
 
 .hero-section-search-overlay {
   position: absolute;
-  background-color: rgba(138, 170, 179, 0.525);
+  background: linear-gradient(rgb(110, 182, 202), rgba(141, 201, 217, 0.7), rgba(156, 189, 198, 0.7), rgba(138, 170, 179, 0.5));
   width: 100%;
   height: 100%;
   z-index: 10;
@@ -183,9 +184,11 @@
 }
 
 .search-dropdown-locked {
-  font-size: 0.9rem;
+  font-size: 0.85rem;
   background-color: rgb(242, 237, 237);
   color: rgb(148, 147, 147);
+  border: 1px solid rgb(236, 231, 231);
+  padding: 0;
   cursor: default;
 
   &:hover,
