--- a/src/assets/scss/_search-form.scss
+++ b/src/assets/scss/_search-form.scss
@@ -167,6 +167,7 @@
   -moz-user-select: none;
   -webkit-user-select: none;
   padding: 0.3rem 0;
+  margin-top: 0.5rem;
   cursor: pointer;
   z-index: 56;
 
