--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -9,6 +9,8 @@ $color-tertiary: rgb(112, 65, 207);
 
 $color-text: rgb(52, 49, 49);
 
+$white: rgb(241, 240, 240);
+
 // box-shadow
 $focus-shadow: 0 0 3px 1px #8baeb3;
 $hover-shadow: 0 0 1px 0 #ced0e4;
