--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -35,6 +35,7 @@
 @import "react-widgets-dropdown.scss";
 
 @import "animations";
+@import "buttons";
 @import "footer";
 @import "loading";
 @import "navbar";
